--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,4 +33,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ needs.setup.outputs.git-branch }}
+  
+  close-issue:
+    name: Close GitHub issue
+    runs-on: ubuntu-18.04
 
+    if: startsWith(github.event.issue.title, 'deploy')
+    steps:
+      - name: Close issue
+        uses: peter-evans/close-issue@v1
+        with:
+          comment: |
+            Deployed branch
+            Auto-closing this issue.
