--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,7 +40,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ needs.setup.outputs.git-branch }}
-  
+      
+      # some more steps.
+
+
   close-issue:
     name: Close GitHub issue
     runs-on: ubuntu-18.04
