--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
       - opened
   push:
     branches:
-      - master
+      - main
     
 name: dev deployment
 jobs:
@@ -22,7 +22,7 @@ jobs:
         if: github.event_name == 'repository_dispatch'
         run: |
           echo "::set-output name=git-branch::$(echo ${{ github.event.client_payload.ref }})"
-          
+
       - name: dev-deployment-any-branch
         if: startsWith(github.event.issue.title, 'deploy')
 
