--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,34 +15,34 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
+      tag: ${{ steps.dev.outputs.tag || steps.devmain.outputs.tag || steps.devslack.outputs.tag }}
       git-branch: ${{ steps.dev.outputs.git-branch  ||  steps.devmain.outputs.git-branch || steps.devslack.outputs.git-branch }}
-    
+      stack: ${{ steps.dev.outputs.stack || steps.devmain.outputs.stack || steps.devslack.outputs.stack }}
     steps:
       - name: devslack
         if: github.event_name == 'repository_dispatch'
         id: devslack
         run: |
           echo "::set-output name=git-branch::$(echo ${{ github.event.client_payload.ref }})"
+          echo "::set-output name=tag::dev-$(date +%FT%H-%M)"
+          echo "::set-output name=stack::alpha"
       - name: dev-deployment-any-branch
         if: startsWith(github.event.issue.title, 'deploy')
-
         id: dev
         run: |
           echo "::set-output name=git-branch::$(echo ${{ github.event.issue.title }} | sed 's/^deploy //I')"
-    
+          echo "::set-output name=tag::dev-$(date +%FT%H-%M)"
+          echo "::set-output name=stack::alpha"
       - name: master deployment
         if: github.event_name == 'push'
 
         id: devmain
         run: |
           echo "::set-output name=git-branch::main"
+          echo "::set-output name=tag::dev-$(date +%FT%H-%M)"
+          echo "::set-output name=stack::alpha"
   deploy:
       if: needs.setup.outputs.git-branch
-      needs: [setup]
-      name: Setup Gcloud Account
-      runs-on: ubuntu-latest
-      env:
-        IMAGE_NAME: gcr.io/${{ secrets.DEV_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
       steps:
       # - name: Configure AWS credentials account
       #   uses: aws-actions/configure-aws-credentials@v1
@@ -63,10 +63,6 @@ jobs:
 
       - name: Build Docker image
         run: docker build . -t ratel:latest
-      
-      - name: Tag
-        id: tag
-        run: echo "::set-output name=tag::$(date +'%Y-%m-%d')"
 
       # - name: Push image to ECR
       #   env:
