--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,7 @@ jobs:
           echo "::set-output name=stack::alpha"
   deploy:
       if: needs.setup.outputs.git-branch
+      needs: [ setup ]
       name: build
       runs-on: ubuntu-latest
       steps:
