--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,7 +65,7 @@ jobs:
           ref: ${{ needs.setup.outputs.git-branch }}
 
       - name: Build Docker image
-        run: docker build . -t ratel:latest
+        run: docker build . -t ratel:${{ needs.setup.outputs.tag }}
 
       # - name: Push image to ECR
       #   env:
