--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,6 +40,7 @@ jobs:
         run: |
           curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
           echo "kubectl version- $(kubectl version)"
+          echo "which kubectl- $(which kubectl)"
           echo "./kubectl version - $(./kubectl version)"
 
   close-issue:
